<resources>
    <string name="app_name">Vidyayan Eduventure</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">skip</string>
    <string name="next">next</string>
    <string name="get_started">Get started</string>
    <string name="you_will_get_an_otp">You will get an otp</string>
    <string name="_91">+91</string>
    <string name="great_to_see_you_again">Great to See You again</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="more">More</string>
    <string name="preference_file_name">Location Preference</string>
    <string name="neutral">Neutral</string>
    <string name="already_registered">Already registered ?</string>
    <string name="address">Address</string>
    <string name="student_name">Student name</string>
    <string name="live_class">LIVE CLASS</string>
    <string name="study_material">Study Material</string>
    <string name="library">Library</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="suggestoins">Suggestoins</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
    <string name="all_subject">All subject</string>
</resources>
