<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff">
    <LinearLayout
        android:id="@+id/llout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/rl_"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/bachground"
            android:orientation="horizontal"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="25dp"
                android:id="@+id/profile_Student_pic"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp">
                <ImageView
                    android:id="@+id/imgProfileHeader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_profile"/>

            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_name"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/profile_Student_pic"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:id="@+id/txt_studentname"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_one"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/new_background"
            android:layout_marginHorizontal="5dp"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/live_tv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_live_tv_24"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/live_class"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/live_tv"
                android:layout_marginStart="25dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_two"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/new_background"
            android:layout_marginHorizontal="5dp"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/study_material"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_file_copy_24"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/study_material"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/study_material"
                android:layout_marginStart="25dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_three"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/new_background"
            android:layout_marginHorizontal="5dp"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            > <ImageView
            android:id="@+id/my_content"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_picture_as_pdf_24"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/library"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/my_content"
                android:layout_marginStart="25dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/></RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_four"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/new_background"
            android:layout_marginHorizontal="5dp"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/setting"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_settings_24"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/setting"
                android:layout_marginStart="25dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_five"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/new_background"
            android:layout_marginHorizontal="5dp"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/share"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_share_24"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/share"
                android:layout_marginStart="25dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_six"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/new_background"
            android:layout_marginHorizontal="5dp"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/suggestion"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_add_box_24"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggestoins"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/suggestion"
                android:layout_marginStart="25dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_seven"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/new_background"
            android:layout_marginHorizontal="5dp"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/about_us"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_contact_mail_24"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/about_us"
                android:layout_marginStart="25dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>


</ScrollView>